@@ -2,7 +2,7 @@
 .\" Process with
 .\" nroff -man bin2dec.3
 .\" 2011-03-10 JoungKyun Kim <htt://oops.org>
-.\" $Id: bin2dec.3,v 1.2 2011-03-28 10:43:57 oops Exp $
+.\" $Id: bin2dec.3,v 1.3 2011-03-28 13:03:13 oops Exp $
 .SH 이름
 bin2dec \- 2진수 문자열을 signed 4byte 정수로 변환
 .br
@@ -41,6 +41,8 @@ or
 함수는 32bit까지 처리가 가능하며,
 .BI bin2long()
 함수는 64bit까지 처리가 가능하다.
+
+32bit 시스템에서
 .BI bin2long()
 함수는 32/64bit machine의 호환을 위하여 64bit integer를 상위/하위 비트를
 나누어서 계산을 하므로 명확하게 32bit 범위의 수를 변환한 경우에는
